--- a/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/component/sw-sales-channel-modal/sw-sales-channel-modal.html.twig
@@ -42,7 +42,7 @@
                 <template slot="columns" slot-scope="{ item }">
                     {% block sw_sales_channel_grid_columns %}
                         {% block sw_sales_channel_grid_columns_icon %}
-                            <sw-grid-column flex="minmax(80px, 80px)" dataIndex="icon">
+                            <sw-grid-column flex="80px" dataIndex="icon">
                                 <span class="sw-sales-channel-modal__grid-icon">
                                     <sw-icon v-if="item.iconName" :name="item.iconName">
                                     </sw-icon>
@@ -51,7 +51,7 @@
                         {% endblock %}
 
                         {% block sw_sales_channel_grid_columns_content %}
-                            <sw-grid-column flex="minmax(100px, 1fr)" dataIndex="content">
+                            <sw-grid-column flex="minmax(200px, 1fr)" dataIndex="content">
                                 <div class="sw-sales-channel-modal__grid-item-content">
                                     <h3 class="sw-sales-channel-modal__grid-item-name">{{ item.name }}</h3>
                                     <div class="sw-sales-channel-modal__grid-item-description">{{ item.description }}</div>
@@ -60,11 +60,15 @@
                         {% endblock %}
 
                         {% block sw_sales_channel_grid_columns_actions %}
-                            <sw-grid-column flex="minmax(80px, 180px)"
+                            <sw-grid-column flex="auto"
                                             align="center"
-                                            dataIndex="actions">
-                                <sw-button variant="primary" size="small" @click="onOpenDetail(item.id)">
+                                            dataIndex="actions"
+                                            class="sw-sales-channel-modal__grid-actions">
+                                <sw-button size="small" @click="onOpenDetail(item.id)">
                                     {{ $tc('sw-sales-channel.modal.buttonShowDetails') }}
+                                </sw-button>
+                                <sw-button variant="primary" size="small" @click="onAddChannel(item.id)">
+                                    {{ $tc('sw-sales-channel.modal.buttonAddChannel') }}
                                 </sw-button>
                             </sw-grid-column>
                         {% endblock %}
@@ -119,14 +123,22 @@
 
         {% block sw_sales_channel_modal_footer %}
             <template slot="modal-footer">
-                {% block sw_sales_channel_modal_footer_back %}
-                    <sw-button v-if="detailType" size="small" @click.prevent="detailType = false">
-                        {{ $tc('sw-sales-channel.modal.buttonBack') }}
-                    </sw-button>
-                {% endblock %}
+                <div v-if="detailType">
+                    {% block sw_sales_channel_modal_footer_back %}
+                        <sw-button v-if="detailType" size="small" @click.prevent="detailType = false">
+                            {{ $tc('sw-sales-channel.modal.buttonBack') }}
+                        </sw-button>
+                    {% endblock %}
+
+                    {% block sw_sales_channel_modal_footer_add_channel %}
+                        <sw-button variant="primary" size="small" @click="onAddChannel">
+                            {{ $tc('sw-sales-channel.modal.buttonAddChannel') }}
+                        </sw-button>
+                    {% endblock %}
+                </div>
 
                 {% block sw_sales_channel_modal_footer_cancel %}
-                    <sw-button size="small" @click="onCloseModal">
+                    <sw-button v-else size="small" @click="onCloseModal">
                         {{ $tc('sw-sales-channel.modal.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
