next-549 - added sw-media-upload-container and sw-media-upload-url-modal components

--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -30,6 +30,7 @@
 // Typography
 @font-family-default:            'Source Sans Pro', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 @font-size-default:              16px;
+@font-size-large:                18px;
 @font-size-small:                14px;
 
 // Miscellaneous
