--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -3,7 +3,7 @@
 
         {% block sw_settings_shipping_detail_header %}
             <template slot="smart-bar-header">
-                <h2 v-if="tax.name">{{ tax.name }}</h2>
+                <h2 v-if="shippingMethod.name">{{ shippingMethod.name }}</h2>
                 <h2 v-else>{{ $tc('sw-settings-shipping.detail.textHeadline') }}</h2>
             </template>
         {% endblock %}
@@ -11,13 +11,13 @@
         {% block sw_settings_shipping_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_settings_shipping_detail_actions_abort %}
-                    <sw-button :disabled="tax.isLoading" link="sw.settings.shipping.index">
+                    <sw-button :disabled="shippingMethod.isLoading" link="sw.settings.shipping.index">
                         {{ $tc('sw-settings-shipping.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_settings_shipping_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="tax.isLoading" @click.prevent="onSave">
+                    <sw-button variant="primary" :disabled="shippingMethod.isLoading" @click.prevent="onSave">
                         {{ $tc('sw-settings-shipping.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
@@ -29,22 +29,25 @@
 
                 {% block sw_settings_shipping_detail_content_card %}
                     <sw-card :title="$tc('sw-settings-shipping.detail.titleCard')">
+                        {% block sw_settings_shipping_detail_content_field_name %}
+                            <sw-field type="text"
+                                      :label="$tc('sw-settings-shipping.detail.labelName')"
+                                      :placeholder="$tc('sw-settings-shipping.detail.placeholderName')"
+                                      v-model="shippingMethod.name">
+                            </sw-field>
+                        {% endblock %}
                         <sw-container grid="1fr 1fr" gap="0px 30px">
-
-                            {% block sw_settings_shipping_detail_content_field_name %}
-                                <sw-field type="text"
-                                          :label="$tc('sw-settings-shipping.detail.labelName')"
-                                          :placeholder="$tc('sw-settings-shipping.detail.placeholderName')"
-                                          v-model="tax.name">
+                            {% block sw_settings_shipping_detail_content_field_active %}
+                                <sw-field type="checkbox"
+                                          :label="$tc('sw-settings-shipping.detail.labelActive')"
+                                          v-model="shippingMethod.active">
                                 </sw-field>
                             {% endblock %}
 
-                            {% block sw_settings_shipping_detail_content_field_tax_rate %}
-                                <sw-field type="number"
-                                          suffix="%"
-                                          :label="$tc('sw-settings-shipping.detail.labelTaxRate')"
-                                          :placeholder="$tc('sw-settings-shipping.detail.placeholderTaxRate')"
-                                          v-model="tax.taxRate">
+                            {% block sw_settings_shipping_detail_content_field_bind_shipping_free %}
+                                <sw-field type="checkbox"
+                                          :label="$tc('sw-settings-shipping.detail.labelBindShippingfree')"
+                                          v-model="shippingMethod.bindShippingfree">
                                 </sw-field>
                             {% endblock %}
                         </sw-container>
