--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-list/sw-settings-payment-list.html.twig
@@ -40,7 +40,7 @@
                 {% block sw_settings_payment_list_content_card %}
                     <sw-card :isLoading="isLoading">
                         {% block sw_settings_payment_list_grid %}
-                            <sw-grid class="sw-settings-payment-list-grid" :items="paymentMethods" table>
+                            <sw-grid slot="grid" class="sw-settings-payment-list-grid" :items="paymentMethods" table>
                                 <template slot="columns" slot-scope="{ item }">
                                     {% block sw_product_list_grid_columns %}
 
