NEXT-458 - Refactor mobile controls in search bar, refactor displaying the shop version

--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -38,6 +38,7 @@
 // z-index
 @z-index-loader:                 10;
 @z-index-multi-select-results:   600;
+@z-index-off-canvas:             750;
 @z-index-flyout:                 700;
 @z-index-search-bar-results:     800;
 @z-index-modal:                  1000;
