--- a/Resources/administration/src/app/component/base/sw-version/sw-version.html.twig
+++ b/Resources/administration/src/app/component/base/sw-version/sw-version.html.twig
@@ -2,17 +2,27 @@
     <div class="sw-version">
 
         {% block sw_version_name %}
-            <h1 class="sw-version__title">
-                Admin prototype
-                <span title="Shop status: OK" class="sw-admin-menu__shop-status">
-                    <sw-color-badge variant="success" :rounded="true"></sw-color-badge>
-                </span>
-            </h1>
+            <div class="sw-version__title">
+
+                {% block sw_version_name_text %}
+                    {{ $tc('global.sw-admin-menu.textProjectName') }}
+                {% endblock %}
+
+                {% block sw_version_status %}
+                    <span title="Shop status: OK" class="sw-version__status">
+                        {% block sw_version_status_badge %}
+                            <sw-color-badge variant="success" :rounded="true"></sw-color-badge>
+                        {% endblock %}
+                    </span>
+                {% endblock %}
+            </div>
         {% endblock %}
 
         {% block sw_version_info %}
             <div class="sw-version__info">
-                Shopware administration
+                {% block sw_version_info_text %}
+                    {{ $tc('global.sw-admin-menu.textShopwareAdmin') }}
+                {% endblock %}
             </div>
         {% endblock %}
     </div>
