--- a/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
+++ b/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.less
@@ -54,6 +54,10 @@
         right: 0;
         margin: 0 20px;
 
+        @media screen and (max-width: 900px) {
+            display: none;
+        }
+
         .sw-field {
             display: grid;
             grid-template-columns: 120px 60px;
