--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -63,6 +63,13 @@
                    @sw-media-modal-delete-delete="deleteSelection">
                 </sw-media-modal-delete>
             {% endblock %}
+
+            {% block sw_media_catalog_modal_replace %}
+                <sw-media-modal-replace :itemToReplace="mediaItemToReplace"
+                    @sw-media-modal-replace-close="closeReplaceModal"
+                    @sw-media-modal-replace-replace-started="handleReplacementStarted">
+                </sw-media-modal-replace>
+            {% endblock %}
         </template>
     </sw-page>
 {% endblock %}
